--- a/src/Components/LowerFooter.css
+++ b/src/Components/LowerFooter.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  background: #020b31;
+  background: #141b2c;
   align-content: center;
   justify-content: center;
   padding: 30px;
