--- a/src/Pages/Order.css
+++ b/src/Pages/Order.css
@@ -4,17 +4,14 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
-  background-color: #e5e5e5;
   position: relative;
+  padding: 50px;
 }
 
 .order_content {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-gap: 20px;
-  width: 80%;
-  max-width: 1200px;
 }
 
 .product_table_container {
@@ -24,19 +21,31 @@
 .product_table {
   width: 100%;
   border-collapse: collapse;
-  box-shadow: 0 0 25px 0 #cbcbcbbf;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .product_table th,
 .product_table td {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 12px 15px;
   text-align: left;
 }
 
 .product_table th {
-  background-color: #f2f2f2;
-  color: #333;
+  background-color: #f0f0f0;
+  color: black;
+  font-weight: bold;
+}
+
+.product_table tbody tr {
+  background-color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.product_table tbody tr:hover {
+  background-color: #f1f1f1;
 }
 
 .order_form_container {
@@ -45,8 +54,8 @@
   align-items: center;
   justify-content: space-evenly;
   background: #fff;
-  box-shadow: 0 0 25px 0 #cbcbcbbf;
-  border-radius: 6px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   padding: 20px;
   height: fit-content;
 }
@@ -85,54 +94,24 @@
   width: 100%;
 }
 
-.order_button,
-.cancel_button,
-.show_orders_button {
-  padding: 10px 20px;
-  border: 2px solid #333;
-  border-radius: 4px;
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.pagination button {
+  padding: 5px 10px;
+  margin: 0 5px;
   cursor: pointer;
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-.order_button {
-  background-color: #333;
-  color: #fff;
-}
-
-.cancel_button {
+  border: 1px solid #ddd;
+  border-radius: 4px;
   background-color: #fff;
-  color: #333;
+  transition: background-color 0.3s ease;
 }
 
-.show_orders_button {
-  background-color: #333;
-  color: #fff;
-  margin-top: 50px;
-}
-
-.order_button:hover,
-.cancel_button:hover,
-.show_orders_button:hover {
-  opacity: 0.8;
-}
-
-@media screen and (max-width: 720px) {
-  .order_content {
-    flex-direction: column;
-  }
-
-  .product_table_container {
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .order_form_container {
-    width: 100%;
-  }
-
-  .product_table {
-    width: 100%;
-  }
+.pagination button:hover {
+  background-color: #f1f1f1;
 }
