--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -12,7 +12,6 @@
   background: #fff;
   width: 100%;
 }
-
 .logo {
   display: flex;
   width: 232px;
@@ -53,8 +52,8 @@
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
-.bgMenu {
-  background: #c9e6ff;
+.MenuItems:hover {
+  background-color: #f0f0f0;
   padding: 0px 9px;
   border-radius: 6px;
 }
@@ -77,7 +76,6 @@
   height: 1px;
   width: 50%;
 }
-
 .active_links {
   position: fixed;
   height: 100vh;
@@ -104,7 +102,11 @@
   top: -3px;
   transition: all 400ms ease-in;
 }
-
+.auth-links {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
